Fix gap on blog page

--- a/_sass/4-layouts/post.scss
+++ b/_sass/4-layouts/post.scss
@@ -46,7 +46,7 @@
   position: relative;
   width: 100%;
   aspect-ratio: 4 / 1;
-  margin: 32px 0 48px 0;
+  margin: 0 0 48px 0;
   border-radius: 4px;
   overflow: hidden;
 
